--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=.7">
     <link rel="icon" type="image/png" href="1.jpg"/>                    <!-- link for browsers tab logo -->
     <title>SHANTINATH MARBLES</title>
 
