--- a/index.html
+++ b/index.html
@@ -78,20 +78,20 @@
     <h1>contact us</h1>
     <ul>
       <li class="address">
-        <img src="file:///C:/Users/Ashish/Desktop/new%20marble/pin.jpg" width="30px" alt="address">
+        <img src="https://raw.githubusercontent.com/Ashishtotla/shantinath/master/images/contact/pin.jpg" width="30px" alt="address">
         <p>shantinath marbles</p>
       </li>
       <li class="call">
-        <img src="file:///C:/Users/Ashish/Desktop/new%20marble/phone.png" width="30px" alt="call">
+        <img src="https://raw.githubusercontent.com/Ashishtotla/shantinath/master/images/contact/phone.png" width="30px" alt="call">
         <p>phone :- 1234567890</p>
       </li>
       <li class="email">
-        <img src="file:///C:/Users/Ashish/Desktop/new%20marble/email.png" width="30px" alt="email">
+        <img src="https://raw.githubusercontent.com/Ashishtotla/shantinath/master/images/contact/email.png" width="30px" alt="email">
         <p>shantinath@gmail.com</p>
       </li>
       <a href="">
       <li class="facebook">
-        <img src="file:///C:/Users/Ashish/Desktop/new%20marble/facebook.jpg" width="30px" alt="facebook">
+        <img src="https://raw.githubusercontent.com/Ashishtotla/shantinath/master/images/contact/facebook.jpg" width="30px" alt="facebook">
         <p>facebook</p>
       </li>
       </a>
