--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div class="top-menu">
     <img src="file:///C:/Users/Ashish/Desktop/apj-abdul-kalam-quotes-and-sayings-inspirational-and-very-motivational-quotes-and-sayings.jpg" alt="logo" width="auto" height="80px" style="float:left;">
     <ul>
-      <li><a href="#">Contact</a></li>
-      <li><a href="#">Products</a></li>
-      <li><a href="#">About</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li><a href="#products">Products</a></li>
+      <li><a href="#intro">About</a></li>
     </ul>
   </div>
 
@@ -39,8 +39,11 @@
 	    </div>
   </div>
 
-  <div class="products">
+  <div class="products" id="products">
+    <h1>our products </h1>
+
     <div class="marble">
+      <h2>marble</h2>
       <div class="container">
         <div class="platform">
 		        <div class="face1"></div>
@@ -52,15 +55,30 @@
 	      </div>
       </div>
       <div class="marble-content">
-        <table>
-          <tr>marble</tr>
-          <td>ksajfd</td>
-          <td>safdhbklj</td>
-          <td>ksalbk</td>
-        </table>
+        <ul>
+          <li>crocodile green marble</li>
+          <li>forest green marble</li>
+          <li>imperial green marble</li>
+          <li>natural white marble</li>
+          <li>royal green marble</li>
+          <li>spider green marble</li>
+          <li><a href="#" style="color:green;">view more >></a></li>
+        </ul>
       </div>
     </div>
     <div class="graphite">
+      <h2>granite</h2>
+      <div class="marble-content">
+        <ul>
+          <li>baltic brown granite</li>
+          <li>baltic red granite</li>
+          <li>platinum white granite</li>
+          <li>rajasthan black granite</li>
+          <li>crystal yellow granite</li>
+          <li>raniwara yellow granite</li>
+          <li><a href="#" style="color:green;">view more >></a></li>
+        </ul>
+      </div>
       <div class="container">
         <div class="platform">
 		        <div class="face7"></div>
@@ -74,7 +92,7 @@
     </div>
   </div>
 
-  <footer>
+  <footer id="contact">
     <h1>contact us</h1>
     <ul>
       <li class="address">
