--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
   <!-- header containing the slideshow of images -->
   <header class="start">
-    <h1><u>Shantinath Marbles</u></h1>
-    <p>Construct with us</p>
+    <h1><u>Shantinath Marbles</u>
+    <span>Construct with us</span></h1>
 	   <div class="wrapp">
 		     <div class="wrapped">
 			        <div class="wrapped1"><h1></h1></div>
