--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=.7">
     <link rel="icon" type="image/png" href="1.jpg"/>                    <!-- link for browsers tab logo -->
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
     <title>SHANTINATH MARBLES</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
