--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <!-- header containing the slideshow of images -->
   <header class="start">
-    <h1><u>Shantinath Marbles</u>
+    <h1><u>Shantinath Marbles</u><br>
     <span>Construct with us</span></h1>
 	   <div class="wrapp">
 		     <div class="wrapped">
