--- a/marble/marble.html
+++ b/marble/marble.html
@@ -24,26 +24,26 @@
 
     <section>
       <h1><u>OUR PRODUCTS</u></h1>
-      <div class="marble-1"><div class="" style="background-image:url('file:///C:/Users/Ashish/Desktop/new%20marble/marble/lable/crocodile%20green.jpg')"><p>crocodile green</p></div></div>
+      <div class="marble-1"><div class="" style="background-image:url('https://raw.githubusercontent.com/Ashishtotla/shantinath/master/images/marble-animation/marble-animation_1.jpg')"><p>crocodile green</p></div></div>
       <div class="marble-1"><div class="" style="background-image:url('file:///C:/Users/Ashish/Desktop/new%20marble/marble/lable/Emerald_Green_Marble_2.jpg')"><p>emerald green</p></div></div>
       <div class="marble-1"><div class=""  style="background-image:url('file:///C:/Users/Ashish/Desktop/new%20marble/marble/lable/Emerald_Green_Marble_2.jpg')"><p>forest greenf</p></div></div>
       <div class="marble-1"><div class=""  style="background-image:url('file:///C:/Users/Ashish/Desktop/new%20marble/marble/lable/Emerald_Green_Marble_2.jpg')"><p>imperial green </p></div></div>
       <div class="marble-1"><div class=""  style="background-image:url('file:///C:/Users/Ashish/Desktop/new%20marble/marble/lable/Emerald_Green_Marble_2.jpg')"><p>marble mahestic</p></div></div>
-      <div class="marble-1"><div class=""  style="background-image:url('file:///C:/Users/Ashish/Desktop/new%20marble/marble/lable/Emerald_Green_Marble_2.jpg')"><p>pink </p></div></div>
+      <div class="marble-1"><div class=""  style="background-image:url('https://raw.githubusercontent.com/Ashishtotla/shantinath/master/images/marble-animation/marble-animation_1.jpg')"><p>pink </p></div></div>
       <div class="marble-1"><div class=""  style="background-image:url('file:///C:/Users/Ashish/Desktop/new%20marble/marble/lable/Emerald_Green_Marble_2.jpg')"><p>royal green</p></div></div>
       <div class="marble-1"><div class=""  style="background-image:url('file:///C:/Users/Ashish/Desktop/new%20marble/marble/lable/Emerald_Green_Marble_2.jpg')"><p>spider green</p></div></div>
       <div class="marble-1"><div class=""  style="background-image:url('file:///C:/Users/Ashish/Desktop/new%20marble/marble/lable/Emerald_Green_Marble_2.jpg')"><p>green medium</p></div></div>
       <div class="marble-1"><div class=""  style="background-image:url('file:///C:/Users/Ashish/Desktop/new%20marble/marble/lable/Emerald_Green_Marble_2.jpg')"><p>emerald green</p></div></div>
-      <div class="marble-1"><div class=""  style="background-image:url('file:///C:/Users/Ashish/Desktop/new%20marble/marble/lable/Emerald_Green_Marble_2.jpg')"><p>natural white</p></div></div>
+      <div class="marble-1"><div class=""  style="background-image:url('https://raw.githubusercontent.com/Ashishtotla/shantinath/master/images/marble-animation/marble-animation_1.jpg')"><p>natural white</p></div></div>
     </section>
   <div class="gallery">
     <h1><u>GALLERY</u></h1>
     <div class="container">
-      <div class="slide-1" style="background-image:url('file:///C:/Users/Ashish/Desktop/new%20marble/marble/lable/Emerald_Green_Marble_2.jpg')"></div>
-      <div class="slide-2" style="background-image:url('file:///C:/Users/Ashish/Desktop/new%20marble/marble/lable/Emerald_Green_Marble_2.jpg')"></div>
-      <div class="slide-3" style="background-image:url('file:///C:/Users/Ashish/Desktop/new%20marble/marble/lable/Emerald_Green_Marble_2.jpg')"></div>
-      <div class="slide-4" style="background-image:url('file:///C:/Users/Ashish/Desktop/new%20marble/marble/lable/Emerald_Green_Marble_2.jpg')"></div>
-      <div class="slide-5" style="background-image:url('file:///C:/Users/Ashish/Desktop/new%20marble/marble/lable/Emerald_Green_Marble_2.jpg')"></div>
+      <div class="slide-1" style="background-image:url('https://raw.githubusercontent.com/Ashishtotla/shantinath/master/images/marble-animation/marble-animation_1.jpg')"></div>
+      <div class="slide-2" style="background-image:url('https://raw.githubusercontent.com/Ashishtotla/shantinath/master/images/marble-animation/marble-animation_1.jpg')"></div>
+      <div class="slide-3" style="background-image:url('https://raw.githubusercontent.com/Ashishtotla/shantinath/master/images/marble-animation/marble-animation_1.jpg')"></div>
+      <div class="slide-4" style="background-image:url('https://raw.githubusercontent.com/Ashishtotla/shantinath/master/images/marble-animation/marble-animation_1.jpg')"></div>
+      <div class="slide-5" style="background-image:url('https://raw.githubusercontent.com/Ashishtotla/shantinath/master/images/marble-animation/marble-animation_1.jpg')"></div>
     </div>
   </div>
     <footer id="contact">
