--- a/marble/marble.html
+++ b/marble/marble.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=0.7,maximum-scale=0.7">
+    <meta name="viewport" content="width=device-width, initial-scale=0.7,maximum-scale=0.7,user-scalable=0">
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
     <title></title>
     <link rel="stylesheet" href="marble-style.css">
