copy the updated code from ooowebhost

--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=.7">
-    <link rel="icon" type="image/png" href="1.jpg"/>                    <!-- link for browsers tab logo -->
+    <meta name="viewport" content="width=device-width, initial-scale=.8.5">
+    <link rel="icon" type="image/png" href="https://shantinathmarble.000webhostapp.com/images/logo/logo.jpg"/>                    <!-- link for browsers tab logo -->
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
-    <title>SHANTINATH MARBLES</title>
+    <title>SHANTINATH MARGO GRANI PVT LTD</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
 
     <div class="top-menu">
-    <img src="file:///C:/Users/Ashish/Desktop/apj-abdul-kalam-quotes-and-sayings-inspirational-and-very-motivational-quotes-and-sayings.jpg" alt="logo" width="auto" height="80px" style="float:left;">
+    <img src="https://shantinathmarble.000webhostapp.com/images/logo/logo.jpg" alt="logo" width="auto" height="80px" style="float:left;">
     <ul>
       <li><a href="#contact">Contact</a></li>
       <li><a href="#products">Products</a></li>
@@ -22,29 +22,35 @@
 
   <!-- header containing the slideshow of images -->
   <header class="start">
-    <h1><u>Shantinath Marbles</u><br>
+    <h1><u>Shantinath Marmo Grani Pvt. Ltd.</u><br>
     <span>Construct with us</span></h1>
 	   <div class="wrapp">
 		     <div class="wrapped">
 			        <div class="wrapped1"><h1></h1></div>
 			        <div class="wrapped2"><h1></h1></div>
 			        <div class="wrapped3"><h1></h1></div>
+                                <div class="wrapped4"><h1></h1></div>
+			        <div class="wrapped5"><h1></h1></div>
+			        <div class="wrapped6"><h1></h1></div>
+                                <div class="wrapped7"><h1></h1></div>
+			        <div class="wrapped8"><h1></h1></div>
 		     </div>
 	   </div>
    </header>
 
   <div class="intro" id="intro">
 	   <h1>ABOUT US</h1>
+           <p style="text-align:center;"><strong>"In the business world, everyone is paid in two coins: cash and experience. Take the experience first, the cash will come later."</strong></p>
 	    <div class="about">
-		      <div class="about1"><i><p>We are leading manufacturer, wholesaler, merchant, dealer, distributor, importer, exporter, stockist, and supplier of every type of Indian marble, Italian marble, imported marble, statuario marble, wonder marble, onyx marble, terventinno marble, empoerador marble, banswara marble, makrana marble, makrana white marble, dungri marble, sawar marble, torrento marble, bottachino marble, dyna marble, parleto marble, amba ji marble, agariya marble, green marble, udaipur green marble, forest green marble, spider green marble, rain forest marble, rain forest green mrble, rain forest brown marble, sunny gold marble, jaisalmer marble, italian gold marble, morwad marble, aaspur marble, marble tiles, marble handicraft, marble jaali, marble pillars, marble tample, marble slabs, marble block, polished marble, semi precious marble, semi precious marble, beige marble , red lavante marble, oman red marble , milky white marble, black marble, golden pottero marble,  </p></i></div>
+		      <div class="about1"><i><p>We are leading manufacturer, wholesaler, merchant , dealer, distributor, stockist,and supplier of variety of Indian marble like crocodile green , forest green , imperial green , royal green , spider green , Baltic brown granite , Baltic red granite , platinum white granite, Rajasthan black granite , crystal yellow granite, raniwara yellow granite , white marble , pink marble , tiger skin granite and many more . Our company promises high quality, high quantity and the wide range of marble and granite to our costumers. </p></i></div>
 	    </div>
   </div>
 
   <div class="products" id="products">
-    <h1>our products </h1>
+    <h1>OUR PRODUCTS</h1>
 
     <div class="marble">
-      <h2>marble</h2>
+      <h2>Marble</h2>
       <div class="container">
         <div class="platform">
 		        <div class="face1"></div>
@@ -57,27 +63,27 @@
       </div>
       <div class="marble-content">
         <ul>
-          <li>crocodile green marble</li>
-          <li>forest green marble</li>
-          <li>imperial green marble</li>
-          <li>natural white marble</li>
-          <li>royal green marble</li>
-          <li>spider green marble</li>
-          <li><a href="#" style="color:green;">view more >></a></li>
+          <li>Crocodile green marble</li>
+          <li>Forest green marble</li>
+          <li>Imperial green marble</li>
+          <li>Natural white marble</li>
+          <li>Royal green marble</li>
+          <li>Spider green marble</li>
+          <li><a href="https://shantinathmarble.000webhostapp.com/marble/marble.html" style="color:green;">View more >></a></li>
         </ul>
       </div>
     </div>
     <div class="graphite">
-      <h2>granite</h2>
+      <h2>Granite</h2>
       <div class="marble-content">
         <ul>
-          <li>baltic brown granite</li>
-          <li>baltic red granite</li>
-          <li>platinum white granite</li>
-          <li>rajasthan black granite</li>
-          <li>crystal yellow granite</li>
-          <li>raniwara yellow granite</li>
-          <li><a href="#" style="color:green;">view more >></a></li>
+          <li>Baltic brown granite</li>
+          <li>Baltic red granite</li>
+          <li>Platinum white granite</li>
+          <li>Rajasthan black granite</li>
+          <li>Crystal yellow granite</li>
+          <li>Raniwara yellow granite</li>
+          <li><a href="https://shantinathmarble.000webhostapp.com/granite/granite.html" style="color:green;">View more >></a></li>
         </ul>
       </div>
       <div class="container">
@@ -97,30 +103,36 @@
     <h1>contact us</h1>
     <ul>
       <li class="address">
-        <img src="https://raw.githubusercontent.com/Ashishtotla/shantinath/master/images/contact/pin.jpg" width="30px" alt="address">
-        <p>shantinath marbles</p>
+        <img src="https://shantinathmarble.000webhostapp.com/images/contact/pin.jpg" width="30px" alt="address">
+        <p>Shantinath marbles & granites,</p>
+        <p>NH-8 near reliance petrole pump,</p>
+        <p>Rishabhdev, Udaipur</p>
+        <p>313802</p> 
       </li>
       <li class="call">
-        <img src="https://raw.githubusercontent.com/Ashishtotla/shantinath/master/images/contact/phone.png" width="30px" alt="call">
-        <p>phone :- 1234567890</p>
+        <img src="https://shantinathmarble.000webhostapp.com/images/contact/phone.png" width="30px" alt="call">
+        <p>Ashish vanawat :- 9414234247</p>
+        <p>Sanjay vanawat :- 9414162247</p>
+        <p>Nirmal vanawat :- 9950894334</p>
       </li>
       <li class="email">
-        <img src="https://raw.githubusercontent.com/Ashishtotla/shantinath/master/images/contact/email.png" width="30px" alt="email">
-        <p>shantinath@gmail.com</p>
+        <img src="https://shantinathmarble.000webhostapp.com/images/contact/email.png" width="30px" alt="email">
+        <p>tatagreen1959@gmail.com</p>
       </li>
-      <a href="">
       <li class="facebook">
-        <img src="https://raw.githubusercontent.com/Ashishtotla/shantinath/master/images/contact/facebook.jpg" width="30px" alt="facebook">
-        <p>facebook</p>
+        <a href="https://www.facebook.com/shantinathmarmo/">
+        <img src="https://shantinathmarble.000webhostapp.com/images/contact/facebook.jpg" width="30px" alt="facebook">
+         </a>
+        <p>Facebook</p>
       </li>
-      </a>
     </ul>
     <div class="contact-map">
-	<iframe class="map" src="https://www.google.com/maps/embed?pb=!1m13!1m11!1m3!1d1756.9146181382791!2d73.68535172817421!3d24.092999411612062!2m2!1f0!2f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sin!4v1490475218579" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+	<iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3642.2466452219833!2d73.68351271456945!3d24.09282028442165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39679c9176dc8b6f%3A0xeaaf1d0652b0cc24!2sshantinath+marble!5e0!3m2!1sen!2sin!4v1499081956109" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
 </div>
     <div class="rights">
       <p> SHANTINATH MARBLES &copy 2017</p>
-      <p>Created by Ashish totla</p>
+      <p>Created by Ashish totla & Aman vanawat</p>
+      <p>contact 8504813704, 8003849294</p>
     </div>
   </footer>
 
